--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '1'
 
 services:
-  jhooq-springboot-container:
-    image: dumi-spring-boot-docker-compose:1
+  springboot-container:
+    image: spring-boot-docker-compose:1
     build:
       context: ./
       dockerfile: Dockerfile
     volumes:
-      - /data/dumi-springboot-container
+      - /data/springboot-container
     ports:
       - "8080-8100:8080"
